--- a/indedx.html
+++ b/indedx.html
@@ -27,16 +27,17 @@
             veritatis saepe iusto quo minima beatae eligendi, aliquid, soluta doloremque fugiat minus.
              Vero, veniam ad odit ducimus cum consequuntur natus adipisci?
         </article>
+        <input name="name" placeholder="jajjaj">
         <footer>
             <ul>
                 <li>
-                    <a href="">facebook</a>
+                    <a href="https://facebook.com">facebook</a>
                 </li>
                 <li>
-                    <a href="">instagram</a>
+                    <a href="https://instagram.com">instagram</a>
                 </li>
                 <li>
-                    <a href="">github</a>
+                    <a href="https://github.com/OctavioSalgado04">github</a>
                 </li>
             </ul>
         </footer>
